# advent2022

./: Cargo.toml
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  mod.rs
