[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
clap = {version="4.3.21", features = ["derive", "std"]}
reqwest = {version="0.11.18", features = ["blocking"]}
